crates/math-core/tests/snapshots/conversion_test__unicode_rprime_3.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: a‷
---
<math>
    <msup>
        <mi>a</mi>
        <mo>‷</mo>
    </msup>
</math>
