crates/math-core/tests/snapshots/conversion_test__unicode_triple_bar.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: x⦀x
---
<math>
    <mi>x</mi>
    <mo stretchy="false">⦀</mo>
    <mi>x</mi>
</math>
