crates/math-core/tests/snapshots/conversion_test__vec_prime.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\vec{x}'"
---
<math>
    <msup>
        <mover accent="true">
            <mi>x</mi>
            <mo stretchy="false">⃗</mo>
        </mover>
        <mo>′</mo>
    </msup>
</math>
