crates/math-core/tests/snapshots/conversion_test__vertical_line.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: P(x|y)
---
<math>
    <mi>P</mi>
    <mo stretchy="false">(</mo>
    <mi>x</mi>
    <mi>|</mi>
    <mi>y</mi>
    <mo stretchy="false">)</mo>
</math>
