crates/math-core/tests/snapshots/conversion_test__vertical_line_not_redefined_for_vert.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\Braket{\\phi\\vert\\psi}"
---
<math>
    <mrow>
        <mo>⟨</mo>
        <mi>ϕ</mi>
        <mo stretchy="false" lspace="0" rspace="0">|</mo>
        <mi>ψ</mi>
        <mo>⟩</mo>
    </mrow>
</math>
