crates/math-core/tests/snapshots/conversion_test__vertical_line_reset_after_set.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\set{x|y}|z"
---
<math>
    <mo stretchy="false">{</mo>
    <mspace width="0.16666667em"/>
    <mi>x</mi>
    <mo form="infix">|</mo>
    <mi>y</mi>
    <mspace width="0.16666667em"/>
    <mo stretchy="false">}</mo>
    <mo stretchy="false" lspace="0" rspace="0">|</mo>
    <mi>z</mi>
</math>
