crates/math-core/tests/snapshots/conversion_test__vmatrix_hline.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\begin{vmatrix} 1 & 2 \\\\ \\hline 3 & 4 \\end{vmatrix}"
---
<math>
    <mrow>
        <mo>|</mo>
        <mtable displaystyle="false" scriptlevel="0">
            <mtr>
                <mtd>
                    <mn>1</mn>
                </mtd>
                <mtd>
                    <mn>2</mn>
                </mtd>
            </mtr>
            <mtr>
                <mtd style="border-top: 0.05em solid currentcolor;">
                    <mn>3</mn>
                </mtd>
                <mtd style="border-top: 0.05em solid currentcolor;">
                    <mn>4</mn>
                </mtd>
            </mtr>
        </mtable>
        <mo>|</mo>
    </mrow>
</math>
